// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the chart correctly and the default filter info text when no datasources or campaigns are selected 1`] = `
<div
  class="rv-xy-plot "
  style="width: 800px; height: 400px;"
>
  <svg
    class="rv-xy-plot__inner"
    height="400"
    width="800"
  >
    <g
      class="rv-xy-plot__grid-lines undefined"
      transform="translate(50,40)"
    >
      <line
        class="rv-xy-plot__grid-lines__line"
        x1="0"
        x2="0"
        y1="0"
        y2="310"
      />
      <line
        class="rv-xy-plot__grid-lines__line"
        x1="86.25"
        x2="86.25"
        y1="0"
        y2="310"
      />
      <line
        class="rv-xy-plot__grid-lines__line"
        x1="172.5"
        x2="172.5"
        y1="0"
        y2="310"
      />
      <line
        class="rv-xy-plot__grid-lines__line"
        x1="258.75"
        x2="258.75"
        y1="0"
        y2="310"
      />
      <line
        class="rv-xy-plot__grid-lines__line"
        x1="345"
        x2="345"
        y1="0"
        y2="310"
      />
      <line
        class="rv-xy-plot__grid-lines__line"
        x1="431.25"
        x2="431.25"
        y1="0"
        y2="310"
      />
      <line
        class="rv-xy-plot__grid-lines__line"
        x1="517.5"
        x2="517.5"
        y1="0"
        y2="310"
      />
      <line
        class="rv-xy-plot__grid-lines__line"
        x1="603.75"
        x2="603.75"
        y1="0"
        y2="310"
      />
      <line
        class="rv-xy-plot__grid-lines__line"
        x1="690"
        x2="690"
        y1="0"
        y2="310"
      />
    </g>
    <g
      class="rv-xy-plot__grid-lines undefined"
      transform="translate(50,40)"
    >
      <line
        class="rv-xy-plot__grid-lines__line"
        x1="0"
        x2="690"
        y1="310"
        y2="310"
      />
      <line
        class="rv-xy-plot__grid-lines__line"
        x1="0"
        x2="690"
        y1="279.63166144200625"
        y2="279.63166144200625"
      />
      <line
        class="rv-xy-plot__grid-lines__line"
        x1="0"
        x2="690"
        y1="249.26332288401255"
        y2="249.26332288401255"
      />
      <line
        class="rv-xy-plot__grid-lines__line"
        x1="0"
        x2="690"
        y1="218.8949843260188"
        y2="218.8949843260188"
      />
      <line
        class="rv-xy-plot__grid-lines__line"
        x1="0"
        x2="690"
        y1="188.5266457680251"
        y2="188.5266457680251"
      />
      <line
        class="rv-xy-plot__grid-lines__line"
        x1="0"
        x2="690"
        y1="158.15830721003135"
        y2="158.15830721003135"
      />
      <line
        class="rv-xy-plot__grid-lines__line"
        x1="0"
        x2="690"
        y1="127.78996865203762"
        y2="127.78996865203762"
      />
      <line
        class="rv-xy-plot__grid-lines__line"
        x1="0"
        x2="690"
        y1="97.42163009404388"
        y2="97.42163009404388"
      />
      <line
        class="rv-xy-plot__grid-lines__line"
        x1="0"
        x2="690"
        y1="67.05329153605017"
        y2="67.05329153605017"
      />
      <line
        class="rv-xy-plot__grid-lines__line"
        x1="0"
        x2="690"
        y1="36.68495297805642"
        y2="36.68495297805642"
      />
      <line
        class="rv-xy-plot__grid-lines__line"
        x1="0"
        x2="690"
        y1="6.316614420062711"
        y2="6.316614420062711"
      />
    </g>
    <g
      class="rv-xy-plot__axis rv-xy-plot__axis--horizontal "
      transform="translate(50,350)"
    >
      <line
        class="rv-xy-plot__axis__line"
        x1="0"
        x2="690"
        y1="0"
        y2="0"
      />
      <g
        class="rv-xy-plot__axis__ticks"
        transform="translate(0, 0)"
      >
        <g
          class="rv-xy-plot__axis__tick"
          transform="translate(0, 0)"
        >
          <line
            class="rv-xy-plot__axis__tick__line"
            x1="0"
            x2="0"
            y1="-6"
            y2="6"
          />
          <text
            class="rv-xy-plot__axis__tick__text"
            dy="0.72em"
            text-anchor="middle"
            transform="translate(0, 14)"
          >
            2019
          </text>
        </g>
        <g
          class="rv-xy-plot__axis__tick"
          transform="translate(86.25, 0)"
        >
          <line
            class="rv-xy-plot__axis__tick__line"
            x1="0"
            x2="0"
            y1="-6"
            y2="6"
          />
          <text
            class="rv-xy-plot__axis__tick__text"
            dy="0.72em"
            text-anchor="middle"
            transform="translate(0, 14)"
          >
            12 PM
          </text>
        </g>
        <g
          class="rv-xy-plot__axis__tick"
          transform="translate(172.5, 0)"
        >
          <line
            class="rv-xy-plot__axis__tick__line"
            x1="0"
            x2="0"
            y1="-6"
            y2="6"
          />
          <text
            class="rv-xy-plot__axis__tick__text"
            dy="0.72em"
            text-anchor="middle"
            transform="translate(0, 14)"
          >
            Wed 02
          </text>
        </g>
        <g
          class="rv-xy-plot__axis__tick"
          transform="translate(258.75, 0)"
        >
          <line
            class="rv-xy-plot__axis__tick__line"
            x1="0"
            x2="0"
            y1="-6"
            y2="6"
          />
          <text
            class="rv-xy-plot__axis__tick__text"
            dy="0.72em"
            text-anchor="middle"
            transform="translate(0, 14)"
          >
            12 PM
          </text>
        </g>
        <g
          class="rv-xy-plot__axis__tick"
          transform="translate(345, 0)"
        >
          <line
            class="rv-xy-plot__axis__tick__line"
            x1="0"
            x2="0"
            y1="-6"
            y2="6"
          />
          <text
            class="rv-xy-plot__axis__tick__text"
            dy="0.72em"
            text-anchor="middle"
            transform="translate(0, 14)"
          >
            Thu 03
          </text>
        </g>
        <g
          class="rv-xy-plot__axis__tick"
          transform="translate(431.25, 0)"
        >
          <line
            class="rv-xy-plot__axis__tick__line"
            x1="0"
            x2="0"
            y1="-6"
            y2="6"
          />
          <text
            class="rv-xy-plot__axis__tick__text"
            dy="0.72em"
            text-anchor="middle"
            transform="translate(0, 14)"
          >
            12 PM
          </text>
        </g>
        <g
          class="rv-xy-plot__axis__tick"
          transform="translate(517.5, 0)"
        >
          <line
            class="rv-xy-plot__axis__tick__line"
            x1="0"
            x2="0"
            y1="-6"
            y2="6"
          />
          <text
            class="rv-xy-plot__axis__tick__text"
            dy="0.72em"
            text-anchor="middle"
            transform="translate(0, 14)"
          >
            Fri 04
          </text>
        </g>
        <g
          class="rv-xy-plot__axis__tick"
          transform="translate(603.75, 0)"
        >
          <line
            class="rv-xy-plot__axis__tick__line"
            x1="0"
            x2="0"
            y1="-6"
            y2="6"
          />
          <text
            class="rv-xy-plot__axis__tick__text"
            dy="0.72em"
            text-anchor="middle"
            transform="translate(0, 14)"
          >
            12 PM
          </text>
        </g>
        <g
          class="rv-xy-plot__axis__tick"
          transform="translate(690, 0)"
        >
          <line
            class="rv-xy-plot__axis__tick__line"
            x1="0"
            x2="0"
            y1="-6"
            y2="6"
          />
          <text
            class="rv-xy-plot__axis__tick__text"
            dy="0.72em"
            text-anchor="middle"
            transform="translate(0, 14)"
          >
            Sat 05
          </text>
        </g>
      </g>
    </g>
    <g
      class="rv-xy-plot__axis rv-xy-plot__axis--vertical "
      transform="translate(0,40)"
    >
      <line
        class="rv-xy-plot__axis__line"
        x1="50"
        x2="50"
        y1="0"
        y2="310"
      />
      <g
        class="rv-xy-plot__axis__ticks"
        transform="translate(50, 0)"
      >
        <g
          class="rv-xy-plot__axis__tick"
          transform="translate(0, 310)"
        >
          <line
            class="rv-xy-plot__axis__tick__line"
            x1="6"
            x2="-6"
            y1="0"
            y2="0"
          />
          <text
            class="rv-xy-plot__axis__tick__text"
            dy="0.32em"
            text-anchor="end"
            transform="translate(-14, 0)"
          >
            0
          </text>
        </g>
        <g
          class="rv-xy-plot__axis__tick"
          transform="translate(0, 279.63166144200625)"
        >
          <line
            class="rv-xy-plot__axis__tick__line"
            x1="6"
            x2="-6"
            y1="0"
            y2="0"
          />
          <text
            class="rv-xy-plot__axis__tick__text"
            dy="0.32em"
            text-anchor="end"
            transform="translate(-14, 0)"
          >
            137
          </text>
        </g>
        <g
          class="rv-xy-plot__axis__tick"
          transform="translate(0, 249.26332288401255)"
        >
          <line
            class="rv-xy-plot__axis__tick__line"
            x1="6"
            x2="-6"
            y1="0"
            y2="0"
          />
          <text
            class="rv-xy-plot__axis__tick__text"
            dy="0.32em"
            text-anchor="end"
            transform="translate(-14, 0)"
          >
            275
          </text>
        </g>
        <g
          class="rv-xy-plot__axis__tick"
          transform="translate(0, 218.8949843260188)"
        >
          <line
            class="rv-xy-plot__axis__tick__line"
            x1="6"
            x2="-6"
            y1="0"
            y2="0"
          />
          <text
            class="rv-xy-plot__axis__tick__text"
            dy="0.32em"
            text-anchor="end"
            transform="translate(-14, 0)"
          >
            413
          </text>
        </g>
        <g
          class="rv-xy-plot__axis__tick"
          transform="translate(0, 188.5266457680251)"
        >
          <line
            class="rv-xy-plot__axis__tick__line"
            x1="6"
            x2="-6"
            y1="0"
            y2="0"
          />
          <text
            class="rv-xy-plot__axis__tick__text"
            dy="0.32em"
            text-anchor="end"
            transform="translate(-14, 0)"
          >
            551
          </text>
        </g>
        <g
          class="rv-xy-plot__axis__tick"
          transform="translate(0, 158.15830721003135)"
        >
          <line
            class="rv-xy-plot__axis__tick__line"
            x1="6"
            x2="-6"
            y1="0"
            y2="0"
          />
          <text
            class="rv-xy-plot__axis__tick__text"
            dy="0.32em"
            text-anchor="end"
            transform="translate(-14, 0)"
          >
            689
          </text>
        </g>
        <g
          class="rv-xy-plot__axis__tick"
          transform="translate(0, 127.78996865203762)"
        >
          <line
            class="rv-xy-plot__axis__tick__line"
            x1="6"
            x2="-6"
            y1="0"
            y2="0"
          />
          <text
            class="rv-xy-plot__axis__tick__text"
            dy="0.32em"
            text-anchor="end"
            transform="translate(-14, 0)"
          >
            827
          </text>
        </g>
        <g
          class="rv-xy-plot__axis__tick"
          transform="translate(0, 97.42163009404388)"
        >
          <line
            class="rv-xy-plot__axis__tick__line"
            x1="6"
            x2="-6"
            y1="0"
            y2="0"
          />
          <text
            class="rv-xy-plot__axis__tick__text"
            dy="0.32em"
            text-anchor="end"
            transform="translate(-14, 0)"
          >
            965
          </text>
        </g>
        <g
          class="rv-xy-plot__axis__tick"
          transform="translate(0, 67.05329153605017)"
        >
          <line
            class="rv-xy-plot__axis__tick__line"
            x1="6"
            x2="-6"
            y1="0"
            y2="0"
          />
          <text
            class="rv-xy-plot__axis__tick__text"
            dy="0.32em"
            text-anchor="end"
            transform="translate(-14, 0)"
          >
            1103
          </text>
        </g>
        <g
          class="rv-xy-plot__axis__tick"
          transform="translate(0, 36.68495297805642)"
        >
          <line
            class="rv-xy-plot__axis__tick__line"
            x1="6"
            x2="-6"
            y1="0"
            y2="0"
          />
          <text
            class="rv-xy-plot__axis__tick__text"
            dy="0.32em"
            text-anchor="end"
            transform="translate(-14, 0)"
          >
            1241
          </text>
        </g>
        <g
          class="rv-xy-plot__axis__tick"
          transform="translate(0, 6.316614420062711)"
        >
          <line
            class="rv-xy-plot__axis__tick__line"
            x1="6"
            x2="-6"
            y1="0"
            y2="0"
          />
          <text
            class="rv-xy-plot__axis__tick__text"
            dy="0.32em"
            text-anchor="end"
            transform="translate(-14, 0)"
          >
            1379
          </text>
        </g>
      </g>
      <g
        class="rv-xy-plot__axis__title"
        transform="translate(50, 0)"
      >
        <g
          style="text-anchor: end;"
          transform="translate(16, 6) rotate(-90)"
        >
          <text>
            Clicks
          </text>
        </g>
      </g>
    </g>
    <g
      class="rv-xy-plot__axis rv-xy-plot__axis--vertical "
      transform="translate(740,40)"
    >
      <line
        class="rv-xy-plot__axis__line"
        x1="0"
        x2="0"
        y1="0"
        y2="310"
      />
      <g
        class="rv-xy-plot__axis__ticks"
        transform="translate(0, 0)"
      >
        <g
          class="rv-xy-plot__axis__tick"
          transform="translate(0, 310)"
        >
          <line
            class="rv-xy-plot__axis__tick__line"
            x1="-6"
            x2="6"
            y1="0"
            y2="0"
          />
          <text
            class="rv-xy-plot__axis__tick__text"
            dy="0.32em"
            text-anchor="start"
            transform="translate(14, 0)"
          >
            0k
          </text>
        </g>
        <g
          class="rv-xy-plot__axis__tick"
          transform="translate(0, 279.63166144200625)"
        >
          <line
            class="rv-xy-plot__axis__tick__line"
            x1="-6"
            x2="6"
            y1="0"
            y2="0"
          />
          <text
            class="rv-xy-plot__axis__tick__text"
            dy="0.32em"
            text-anchor="start"
            transform="translate(14, 0)"
          >
            0k
          </text>
        </g>
        <g
          class="rv-xy-plot__axis__tick"
          transform="translate(0, 249.26332288401255)"
        >
          <line
            class="rv-xy-plot__axis__tick__line"
            x1="-6"
            x2="6"
            y1="0"
            y2="0"
          />
          <text
            class="rv-xy-plot__axis__tick__text"
            dy="0.32em"
            text-anchor="start"
            transform="translate(14, 0)"
          >
            1k
          </text>
        </g>
        <g
          class="rv-xy-plot__axis__tick"
          transform="translate(0, 218.8949843260188)"
        >
          <line
            class="rv-xy-plot__axis__tick__line"
            x1="-6"
            x2="6"
            y1="0"
            y2="0"
          />
          <text
            class="rv-xy-plot__axis__tick__text"
            dy="0.32em"
            text-anchor="start"
            transform="translate(14, 0)"
          >
            1k
          </text>
        </g>
        <g
          class="rv-xy-plot__axis__tick"
          transform="translate(0, 188.5266457680251)"
        >
          <line
            class="rv-xy-plot__axis__tick__line"
            x1="-6"
            x2="6"
            y1="0"
            y2="0"
          />
          <text
            class="rv-xy-plot__axis__tick__text"
            dy="0.32em"
            text-anchor="start"
            transform="translate(14, 0)"
          >
            2k
          </text>
        </g>
        <g
          class="rv-xy-plot__axis__tick"
          transform="translate(0, 158.15830721003135)"
        >
          <line
            class="rv-xy-plot__axis__tick__line"
            x1="-6"
            x2="6"
            y1="0"
            y2="0"
          />
          <text
            class="rv-xy-plot__axis__tick__text"
            dy="0.32em"
            text-anchor="start"
            transform="translate(14, 0)"
          >
            2k
          </text>
        </g>
        <g
          class="rv-xy-plot__axis__tick"
          transform="translate(0, 127.78996865203762)"
        >
          <line
            class="rv-xy-plot__axis__tick__line"
            x1="-6"
            x2="6"
            y1="0"
            y2="0"
          />
          <text
            class="rv-xy-plot__axis__tick__text"
            dy="0.32em"
            text-anchor="start"
            transform="translate(14, 0)"
          >
            3k
          </text>
        </g>
        <g
          class="rv-xy-plot__axis__tick"
          transform="translate(0, 97.42163009404388)"
        >
          <line
            class="rv-xy-plot__axis__tick__line"
            x1="-6"
            x2="6"
            y1="0"
            y2="0"
          />
          <text
            class="rv-xy-plot__axis__tick__text"
            dy="0.32em"
            text-anchor="start"
            transform="translate(14, 0)"
          >
            3k
          </text>
        </g>
        <g
          class="rv-xy-plot__axis__tick"
          transform="translate(0, 67.05329153605017)"
        >
          <line
            class="rv-xy-plot__axis__tick__line"
            x1="-6"
            x2="6"
            y1="0"
            y2="0"
          />
          <text
            class="rv-xy-plot__axis__tick__text"
            dy="0.32em"
            text-anchor="start"
            transform="translate(14, 0)"
          >
            4k
          </text>
        </g>
        <g
          class="rv-xy-plot__axis__tick"
          transform="translate(0, 36.68495297805642)"
        >
          <line
            class="rv-xy-plot__axis__tick__line"
            x1="-6"
            x2="6"
            y1="0"
            y2="0"
          />
          <text
            class="rv-xy-plot__axis__tick__text"
            dy="0.32em"
            text-anchor="start"
            transform="translate(14, 0)"
          >
            4k
          </text>
        </g>
        <g
          class="rv-xy-plot__axis__tick"
          transform="translate(0, 6.316614420062711)"
        >
          <line
            class="rv-xy-plot__axis__tick__line"
            x1="-6"
            x2="6"
            y1="0"
            y2="0"
          />
          <text
            class="rv-xy-plot__axis__tick__text"
            dy="0.32em"
            text-anchor="start"
            transform="translate(14, 0)"
          >
            5k
          </text>
        </g>
      </g>
      <g
        class="rv-xy-plot__axis__title"
        transform="translate(0, 0)"
      >
        <g
          style="text-anchor: end;"
          transform="translate(-8, 6) rotate(-90)"
        >
          <text>
            Impressions
          </text>
        </g>
      </g>
    </g>
    <g
      class="rv-xy-plot__series rv-xy-plot__series--mark undefined"
      transform="translate(50,40)"
    >
      <circle
        cx="0"
        cy="310"
        r="5"
        style="opacity: 1; stroke: #12939A; fill: #12939A; stroke-width: 1; display: none;"
      />
    </g>
    <path
      class="rv-xy-plot__series rv-xy-plot__series--line "
      d="M0,57.464488636363654L172.5,17.61363636363635L345,14.75142045454546L517.5,0L690,80.58238636363635"
      style="opacity: 1; stroke: green;"
      transform="translate(50,40)"
    />
    <path
      class="rv-xy-plot__series rv-xy-plot__series--line "
      d="M0,25.448667711598734L172.5,43.42672413793103L345,0L517.5,26.177507836990596L690,94.50626959247649"
      style="opacity: 1; stroke: blue;"
      transform="translate(50,40)"
    />
  </svg>
  <div
    class="rv-discrete-color-legend horizontal "
  >
    <div
      class="rv-discrete-color-legend-item horizontal"
    >
      <svg
        class="rv-discrete-color-legend-item__color"
        height="2"
        width="14"
      >
        <path
          class="rv-discrete-color-legend-item__color__path"
          d="M 0, 1 L 14, 1"
          style="stroke: #12939A;"
        />
      </svg>
      <span
        class="rv-discrete-color-legend-item__title"
      >
        Clicks
      </span>
    </div>
    <div
      class="rv-discrete-color-legend-item horizontal"
    >
      <svg
        class="rv-discrete-color-legend-item__color"
        height="2"
        width="14"
      >
        <path
          class="rv-discrete-color-legend-item__color__path"
          d="M 0, 1 L 14, 1"
          style="stroke: #79C7E3;"
        />
      </svg>
      <span
        class="rv-discrete-color-legend-item__title"
      >
        Impressions
      </span>
    </div>
  </div>
</div>
`;

exports[`renders the chart correctly and the name of the selected datasources and campaigns after selection 1`] = `
<div
  class="rv-xy-plot "
  style="width: 800px; height: 400px;"
>
  <svg
    class="rv-xy-plot__inner"
    height="400"
    width="800"
  >
    <g
      class="rv-xy-plot__grid-lines undefined"
      transform="translate(50,40)"
    >
      <line
        class="rv-xy-plot__grid-lines__line"
        x1="0"
        x2="0"
        y1="0"
        y2="310"
      />
      <line
        class="rv-xy-plot__grid-lines__line"
        x1="86.25"
        x2="86.25"
        y1="0"
        y2="310"
      />
      <line
        class="rv-xy-plot__grid-lines__line"
        x1="172.5"
        x2="172.5"
        y1="0"
        y2="310"
      />
      <line
        class="rv-xy-plot__grid-lines__line"
        x1="258.75"
        x2="258.75"
        y1="0"
        y2="310"
      />
      <line
        class="rv-xy-plot__grid-lines__line"
        x1="345"
        x2="345"
        y1="0"
        y2="310"
      />
      <line
        class="rv-xy-plot__grid-lines__line"
        x1="431.25"
        x2="431.25"
        y1="0"
        y2="310"
      />
      <line
        class="rv-xy-plot__grid-lines__line"
        x1="517.5"
        x2="517.5"
        y1="0"
        y2="310"
      />
      <line
        class="rv-xy-plot__grid-lines__line"
        x1="603.75"
        x2="603.75"
        y1="0"
        y2="310"
      />
      <line
        class="rv-xy-plot__grid-lines__line"
        x1="690"
        x2="690"
        y1="0"
        y2="310"
      />
    </g>
    <g
      class="rv-xy-plot__grid-lines undefined"
      transform="translate(50,40)"
    >
      <line
        class="rv-xy-plot__grid-lines__line"
        x1="0"
        x2="690"
        y1="310"
        y2="310"
      />
      <line
        class="rv-xy-plot__grid-lines__line"
        x1="0"
        x2="690"
        y1="267.38245806983775"
        y2="267.38245806983775"
      />
      <line
        class="rv-xy-plot__grid-lines__line"
        x1="0"
        x2="690"
        y1="224.76491613967556"
        y2="224.76491613967556"
      />
      <line
        class="rv-xy-plot__grid-lines__line"
        x1="0"
        x2="690"
        y1="182.14737420951332"
        y2="182.14737420951332"
      />
      <line
        class="rv-xy-plot__grid-lines__line"
        x1="0"
        x2="690"
        y1="139.5298322793511"
        y2="139.5298322793511"
      />
      <line
        class="rv-xy-plot__grid-lines__line"
        x1="0"
        x2="690"
        y1="96.91229034918888"
        y2="96.91229034918888"
      />
      <line
        class="rv-xy-plot__grid-lines__line"
        x1="0"
        x2="690"
        y1="54.29474841902666"
        y2="54.29474841902666"
      />
      <line
        class="rv-xy-plot__grid-lines__line"
        x1="0"
        x2="690"
        y1="11.677206488864433"
        y2="11.677206488864433"
      />
    </g>
    <g
      class="rv-xy-plot__axis rv-xy-plot__axis--horizontal "
      transform="translate(50,350)"
    >
      <line
        class="rv-xy-plot__axis__line"
        x1="0"
        x2="690"
        y1="0"
        y2="0"
      />
      <g
        class="rv-xy-plot__axis__ticks"
        transform="translate(0, 0)"
      >
        <g
          class="rv-xy-plot__axis__tick"
          transform="translate(0, 0)"
        >
          <line
            class="rv-xy-plot__axis__tick__line"
            x1="0"
            x2="0"
            y1="-6"
            y2="6"
          />
          <text
            class="rv-xy-plot__axis__tick__text"
            dy="0.72em"
            text-anchor="middle"
            transform="translate(0, 14)"
          >
            2019
          </text>
        </g>
        <g
          class="rv-xy-plot__axis__tick"
          transform="translate(86.25, 0)"
        >
          <line
            class="rv-xy-plot__axis__tick__line"
            x1="0"
            x2="0"
            y1="-6"
            y2="6"
          />
          <text
            class="rv-xy-plot__axis__tick__text"
            dy="0.72em"
            text-anchor="middle"
            transform="translate(0, 14)"
          >
            12 PM
          </text>
        </g>
        <g
          class="rv-xy-plot__axis__tick"
          transform="translate(172.5, 0)"
        >
          <line
            class="rv-xy-plot__axis__tick__line"
            x1="0"
            x2="0"
            y1="-6"
            y2="6"
          />
          <text
            class="rv-xy-plot__axis__tick__text"
            dy="0.72em"
            text-anchor="middle"
            transform="translate(0, 14)"
          >
            Wed 02
          </text>
        </g>
        <g
          class="rv-xy-plot__axis__tick"
          transform="translate(258.75, 0)"
        >
          <line
            class="rv-xy-plot__axis__tick__line"
            x1="0"
            x2="0"
            y1="-6"
            y2="6"
          />
          <text
            class="rv-xy-plot__axis__tick__text"
            dy="0.72em"
            text-anchor="middle"
            transform="translate(0, 14)"
          >
            12 PM
          </text>
        </g>
        <g
          class="rv-xy-plot__axis__tick"
          transform="translate(345, 0)"
        >
          <line
            class="rv-xy-plot__axis__tick__line"
            x1="0"
            x2="0"
            y1="-6"
            y2="6"
          />
          <text
            class="rv-xy-plot__axis__tick__text"
            dy="0.72em"
            text-anchor="middle"
            transform="translate(0, 14)"
          >
            Thu 03
          </text>
        </g>
        <g
          class="rv-xy-plot__axis__tick"
          transform="translate(431.25, 0)"
        >
          <line
            class="rv-xy-plot__axis__tick__line"
            x1="0"
            x2="0"
            y1="-6"
            y2="6"
          />
          <text
            class="rv-xy-plot__axis__tick__text"
            dy="0.72em"
            text-anchor="middle"
            transform="translate(0, 14)"
          >
            12 PM
          </text>
        </g>
        <g
          class="rv-xy-plot__axis__tick"
          transform="translate(517.5, 0)"
        >
          <line
            class="rv-xy-plot__axis__tick__line"
            x1="0"
            x2="0"
            y1="-6"
            y2="6"
          />
          <text
            class="rv-xy-plot__axis__tick__text"
            dy="0.72em"
            text-anchor="middle"
            transform="translate(0, 14)"
          >
            Fri 04
          </text>
        </g>
        <g
          class="rv-xy-plot__axis__tick"
          transform="translate(603.75, 0)"
        >
          <line
            class="rv-xy-plot__axis__tick__line"
            x1="0"
            x2="0"
            y1="-6"
            y2="6"
          />
          <text
            class="rv-xy-plot__axis__tick__text"
            dy="0.72em"
            text-anchor="middle"
            transform="translate(0, 14)"
          >
            12 PM
          </text>
        </g>
        <g
          class="rv-xy-plot__axis__tick"
          transform="translate(690, 0)"
        >
          <line
            class="rv-xy-plot__axis__tick__line"
            x1="0"
            x2="0"
            y1="-6"
            y2="6"
          />
          <text
            class="rv-xy-plot__axis__tick__text"
            dy="0.72em"
            text-anchor="middle"
            transform="translate(0, 14)"
          >
            Sat 05
          </text>
        </g>
      </g>
    </g>
    <g
      class="rv-xy-plot__axis rv-xy-plot__axis--vertical "
      transform="translate(0,40)"
    >
      <line
        class="rv-xy-plot__axis__line"
        x1="50"
        x2="50"
        y1="0"
        y2="310"
      />
      <g
        class="rv-xy-plot__axis__ticks"
        transform="translate(50, 0)"
      >
        <g
          class="rv-xy-plot__axis__tick"
          transform="translate(0, 310)"
        >
          <line
            class="rv-xy-plot__axis__tick__line"
            x1="6"
            x2="-6"
            y1="0"
            y2="0"
          />
          <text
            class="rv-xy-plot__axis__tick__text"
            dy="0.32em"
            text-anchor="end"
            transform="translate(-14, 0)"
          >
            0
          </text>
        </g>
        <g
          class="rv-xy-plot__axis__tick"
          transform="translate(0, 267.38245806983775)"
        >
          <line
            class="rv-xy-plot__axis__tick__line"
            x1="6"
            x2="-6"
            y1="0"
            y2="0"
          />
          <text
            class="rv-xy-plot__axis__tick__text"
            dy="0.32em"
            text-anchor="end"
            transform="translate(-14, 0)"
          >
            107
          </text>
        </g>
        <g
          class="rv-xy-plot__axis__tick"
          transform="translate(0, 224.76491613967556)"
        >
          <line
            class="rv-xy-plot__axis__tick__line"
            x1="6"
            x2="-6"
            y1="0"
            y2="0"
          />
          <text
            class="rv-xy-plot__axis__tick__text"
            dy="0.32em"
            text-anchor="end"
            transform="translate(-14, 0)"
          >
            214
          </text>
        </g>
        <g
          class="rv-xy-plot__axis__tick"
          transform="translate(0, 182.14737420951332)"
        >
          <line
            class="rv-xy-plot__axis__tick__line"
            x1="6"
            x2="-6"
            y1="0"
            y2="0"
          />
          <text
            class="rv-xy-plot__axis__tick__text"
            dy="0.32em"
            text-anchor="end"
            transform="translate(-14, 0)"
          >
            321
          </text>
        </g>
        <g
          class="rv-xy-plot__axis__tick"
          transform="translate(0, 139.5298322793511)"
        >
          <line
            class="rv-xy-plot__axis__tick__line"
            x1="6"
            x2="-6"
            y1="0"
            y2="0"
          />
          <text
            class="rv-xy-plot__axis__tick__text"
            dy="0.32em"
            text-anchor="end"
            transform="translate(-14, 0)"
          >
            428
          </text>
        </g>
        <g
          class="rv-xy-plot__axis__tick"
          transform="translate(0, 96.91229034918888)"
        >
          <line
            class="rv-xy-plot__axis__tick__line"
            x1="6"
            x2="-6"
            y1="0"
            y2="0"
          />
          <text
            class="rv-xy-plot__axis__tick__text"
            dy="0.32em"
            text-anchor="end"
            transform="translate(-14, 0)"
          >
            536
          </text>
        </g>
        <g
          class="rv-xy-plot__axis__tick"
          transform="translate(0, 54.29474841902666)"
        >
          <line
            class="rv-xy-plot__axis__tick__line"
            x1="6"
            x2="-6"
            y1="0"
            y2="0"
          />
          <text
            class="rv-xy-plot__axis__tick__text"
            dy="0.32em"
            text-anchor="end"
            transform="translate(-14, 0)"
          >
            643
          </text>
        </g>
        <g
          class="rv-xy-plot__axis__tick"
          transform="translate(0, 11.677206488864433)"
        >
          <line
            class="rv-xy-plot__axis__tick__line"
            x1="6"
            x2="-6"
            y1="0"
            y2="0"
          />
          <text
            class="rv-xy-plot__axis__tick__text"
            dy="0.32em"
            text-anchor="end"
            transform="translate(-14, 0)"
          >
            750
          </text>
        </g>
      </g>
      <g
        class="rv-xy-plot__axis__title"
        transform="translate(50, 0)"
      >
        <g
          style="text-anchor: end;"
          transform="translate(16, 6) rotate(-90)"
        >
          <text>
            Clicks
          </text>
        </g>
      </g>
    </g>
    <g
      class="rv-xy-plot__axis rv-xy-plot__axis--vertical "
      transform="translate(740,40)"
    >
      <line
        class="rv-xy-plot__axis__line"
        x1="0"
        x2="0"
        y1="0"
        y2="310"
      />
      <g
        class="rv-xy-plot__axis__ticks"
        transform="translate(0, 0)"
      >
        <g
          class="rv-xy-plot__axis__tick"
          transform="translate(0, 310)"
        >
          <line
            class="rv-xy-plot__axis__tick__line"
            x1="-6"
            x2="6"
            y1="0"
            y2="0"
          />
          <text
            class="rv-xy-plot__axis__tick__text"
            dy="0.32em"
            text-anchor="start"
            transform="translate(14, 0)"
          >
            0k
          </text>
        </g>
        <g
          class="rv-xy-plot__axis__tick"
          transform="translate(0, 267.38245806983775)"
        >
          <line
            class="rv-xy-plot__axis__tick__line"
            x1="-6"
            x2="6"
            y1="0"
            y2="0"
          />
          <text
            class="rv-xy-plot__axis__tick__text"
            dy="0.32em"
            text-anchor="start"
            transform="translate(14, 0)"
          >
            0k
          </text>
        </g>
        <g
          class="rv-xy-plot__axis__tick"
          transform="translate(0, 224.76491613967556)"
        >
          <line
            class="rv-xy-plot__axis__tick__line"
            x1="-6"
            x2="6"
            y1="0"
            y2="0"
          />
          <text
            class="rv-xy-plot__axis__tick__text"
            dy="0.32em"
            text-anchor="start"
            transform="translate(14, 0)"
          >
            1k
          </text>
        </g>
        <g
          class="rv-xy-plot__axis__tick"
          transform="translate(0, 182.14737420951332)"
        >
          <line
            class="rv-xy-plot__axis__tick__line"
            x1="-6"
            x2="6"
            y1="0"
            y2="0"
          />
          <text
            class="rv-xy-plot__axis__tick__text"
            dy="0.32em"
            text-anchor="start"
            transform="translate(14, 0)"
          >
            1k
          </text>
        </g>
        <g
          class="rv-xy-plot__axis__tick"
          transform="translate(0, 139.5298322793511)"
        >
          <line
            class="rv-xy-plot__axis__tick__line"
            x1="-6"
            x2="6"
            y1="0"
            y2="0"
          />
          <text
            class="rv-xy-plot__axis__tick__text"
            dy="0.32em"
            text-anchor="start"
            transform="translate(14, 0)"
          >
            2k
          </text>
        </g>
        <g
          class="rv-xy-plot__axis__tick"
          transform="translate(0, 96.91229034918888)"
        >
          <line
            class="rv-xy-plot__axis__tick__line"
            x1="-6"
            x2="6"
            y1="0"
            y2="0"
          />
          <text
            class="rv-xy-plot__axis__tick__text"
            dy="0.32em"
            text-anchor="start"
            transform="translate(14, 0)"
          >
            2k
          </text>
        </g>
        <g
          class="rv-xy-plot__axis__tick"
          transform="translate(0, 54.29474841902666)"
        >
          <line
            class="rv-xy-plot__axis__tick__line"
            x1="-6"
            x2="6"
            y1="0"
            y2="0"
          />
          <text
            class="rv-xy-plot__axis__tick__text"
            dy="0.32em"
            text-anchor="start"
            transform="translate(14, 0)"
          >
            3k
          </text>
        </g>
        <g
          class="rv-xy-plot__axis__tick"
          transform="translate(0, 11.677206488864433)"
        >
          <line
            class="rv-xy-plot__axis__tick__line"
            x1="-6"
            x2="6"
            y1="0"
            y2="0"
          />
          <text
            class="rv-xy-plot__axis__tick__text"
            dy="0.32em"
            text-anchor="start"
            transform="translate(14, 0)"
          >
            3k
          </text>
        </g>
      </g>
      <g
        class="rv-xy-plot__axis__title"
        transform="translate(0, 0)"
      >
        <g
          style="text-anchor: end;"
          transform="translate(-8, 6) rotate(-90)"
        >
          <text>
            Impressions
          </text>
        </g>
      </g>
    </g>
    <g
      class="rv-xy-plot__series rv-xy-plot__series--mark undefined"
      transform="translate(50,40)"
    >
      <circle
        cx="0"
        cy="310"
        r="5"
        style="opacity: 1; stroke: #12939A; fill: #12939A; stroke-width: 1; display: none;"
      />
    </g>
    <path
      class="rv-xy-plot__series rv-xy-plot__series--line "
      d="M0,50.474358974358935L172.5,57.23076923076923L345,40.935897435897395L517.5,0L690,71.14102564102564"
      style="opacity: 1; stroke: green;"
      transform="translate(50,40)"
    />
    <path
      class="rv-xy-plot__series rv-xy-plot__series--line "
      d="M0,66.5686004949134L172.5,36.9920263953808L345,28.042342590046747L517.5,0L690,104.15727247731645"
      style="opacity: 1; stroke: blue;"
      transform="translate(50,40)"
    />
  </svg>
  <div
    class="rv-discrete-color-legend horizontal "
  >
    <div
      class="rv-discrete-color-legend-item horizontal"
    >
      <svg
        class="rv-discrete-color-legend-item__color"
        height="2"
        width="14"
      >
        <path
          class="rv-discrete-color-legend-item__color__path"
          d="M 0, 1 L 14, 1"
          style="stroke: #12939A;"
        />
      </svg>
      <span
        class="rv-discrete-color-legend-item__title"
      >
        Clicks
      </span>
    </div>
    <div
      class="rv-discrete-color-legend-item horizontal"
    >
      <svg
        class="rv-discrete-color-legend-item__color"
        height="2"
        width="14"
      >
        <path
          class="rv-discrete-color-legend-item__color__path"
          d="M 0, 1 L 14, 1"
          style="stroke: #79C7E3;"
        />
      </svg>
      <span
        class="rv-discrete-color-legend-item__title"
      >
        Impressions
      </span>
    </div>
  </div>
</div>
`;
